--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -41,7 +41,7 @@
     </section>
 
     <section class="meta">
-      <a href="https://github.com/{{ site.github }}" target="_blank"><i class="fa fa-github"></i></a>
+    <!--   <a href="https://github.com/{{ site.github }}" target="_blank"><i class="fa fa-github"></i></a>--> 
       <a href="https://twitter.com/{{ site.twitter }}" target="_blank"><i class="fa fa-twitter"></i></a>
       <a href="mailto:vamseejasti@**REMOVEME**me.com?Subject=Hi%20from%20the%20blog" target="_top"><i class="icon-envelope"></i></a>
     </section>
