--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -41,8 +41,8 @@
     </section>
 
     <section class="meta">
-    <!--   <a href="https://github.com/{{ site.github }}" target="_blank"><i class="fa fa-github"></i></a>--> 
-      <a href="https://twitter.com/{{ site.twitter }}" target="_blank"><i class="fa fa-twitter"></i></a>
+  		<!--   <a href="https://github.com/jasti" target="_blank"><i class="icon icon-github"></i></a>-->
+      <a href="https://twitter.com/vamseejasti" target="_blank"><i class="icon icon-twitter"></i></a>
       <a href="mailto:vamseejasti@**REMOVEME**me.com?Subject=Hi%20from%20the%20blog" target="_top"><i class="icon-envelope"></i></a>
     </section>
 
