--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -22,7 +22,7 @@
   <link media="only screen and (device-width: 768px)" href="/css/mobile.css" type="text/css" rel="stylesheet" />
   <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-
+  <link rel="shortcut icon" href="images/favicon.ico">
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script type="text/javascript" src="/js/application.js"></script>
 </head>
@@ -41,7 +41,8 @@
     </section>
 
     <section class="meta">
-  		<!--   <a href="https://github.com/jasti" target="_blank"><i class="icon icon-github"></i></a>-->
+  		<!-- TODO, see why this URL is not working 
+  		  <a href="https://github.com/jasti" target="_blank"><i class="icon icon-github"></i></a>-->
       <a href="https://twitter.com/vamseejasti" target="_blank"><i class="icon icon-twitter"></i></a>
       <a href="mailto:vamseejasti@**REMOVEME**me.com?Subject=Hi%20from%20the%20blog" target="_top"><i class="icon-envelope"></i></a>
     </section>
