Change primary font to Avenir Next

--- a/css/base.css
+++ b/css/base.css
@@ -104,7 +104,7 @@ a {
 
 .content h1 {
 	color: #333;
-	font-family: "Yanone Kaffeesatz", Helvetica, sans-serif;
+	font-family: "Avenir Next", Helvetica, sans-serif;
 	font-weight: 400;
 }
 
@@ -115,7 +115,7 @@ a {
 
 .content h2 {
 	color: #333;
-	font-family: "Yanone Kaffeesatz", Helvetica, sans-serif;
+	font-family: "Avenir Next", Helvetica, sans-serif;
 	font-weight: 400;
 }
 
@@ -126,7 +126,7 @@ a {
 
 .content h3 {
 	color: #333;
-	font-family: "Yanone Kaffeesatz", Helvetica, sans-serif;
+	font-family: "Avenir Next", Helvetica, sans-serif;
 	font-weight: 400;
 }
 
@@ -137,7 +137,7 @@ a {
 
 .content h4 {
 	color: #333;
-	font-family: "Yanone Kaffeesatz", Helvetica, sans-serif;
+	font-family: "Avenir Next", Helvetica, sans-serif;
 	font-weight: 400;
 }
 
@@ -219,7 +219,7 @@ a {
 
 .content .byline {
 	margin-bottom: 17px;
-	font-family: "Yanone Kaffeesatz", Helvetica, sans-serif;
+	font-family: "Avenir Next, Helvetica, sans-serif;
 	padding-left: 0px;
 	font-size: 17px;
 	color: #777;
