--- a/css/base.css
+++ b/css/base.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 body {
-	font-family: "Avenir Next","Palatino Linotype", "Book Antiqua", Palatino, serif;
+	font-family: "Open Sans","Palatino Linotype", "Book Antiqua", Palatino, serif;
 	margin: 0;
 	-webkit-font-smoothing: antialiased;
 }
@@ -104,7 +104,7 @@ a {
 
 .content h1 {
 	color: #333;
-	font-family: "Avenir Next", Helvetica, sans-serif;
+	font-family: ""Open Sans"", Helvetica, sans-serif;
 	font-weight: 400;
 }
 
@@ -115,7 +115,7 @@ a {
 
 .content h2 {
 	color: #333;
-	font-family: "Avenir Next", Helvetica, sans-serif;
+	font-family: "Open Sans", Helvetica, sans-serif;
 	font-weight: 400;
 }
 
@@ -126,7 +126,7 @@ a {
 
 .content h3 {
 	color: #333;
-	font-family: "Avenir Next", Helvetica, sans-serif;
+	font-family: "Open Sans", Helvetica, sans-serif;
 	font-weight: 400;
 }
 
@@ -137,7 +137,7 @@ a {
 
 .content h4 {
 	color: #333;
-	font-family: "Avenir Next", Helvetica, sans-serif;
+	font-family: "Open Sans", Helvetica, sans-serif;
 	font-weight: 400;
 }
 
@@ -219,7 +219,7 @@ a {
 
 .content .byline {
 	margin-bottom: 17px;
-	font-family: "Avenir Next, Helvetica, sans-serif;
+	font-family: "Open Sans", Helvetica, sans-serif;
 	padding-left: 0px;
 	font-size: 17px;
 	color: #777;
@@ -269,7 +269,7 @@ a {
 .content .meta {
 	margin: 30px 0;
 	padding: 10px 0;
-	font-family: Helvetica, sans-serif;
+	font-family: "Open Sans",Helvetica, sans-serif;
 }
 
 .content .meta p {
