--- a/css/mobile.css
+++ b/css/mobile.css
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 25px; }
   .sidebar img {
-    display: none; }
+    display: inline; }
   .sidebar .name {
     display: inline; }
     .sidebar .name #fname, .sidebar .name #lname {
