--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -43,7 +43,7 @@
 <body>
   <section class="sidebar">
     <a href="/">
-      <img src="/images/blogPic.jpg" height="75" width="75" class="avatar" />
+      <img src="/images/blogPic.jpg" height="100" width="100" class="avatar" />
     </a>
 
     <section class="name">
@@ -57,7 +57,9 @@
   		<!-- TODO, see why this U 
   		  <a href="https://github.com/jasti" target="_blank"><i class="icon icon-github"></i></a>-->
       <a href="https://twitter.com/vamseejasti" target="_blank"><i class="icon icon-twitter"></i></a>
-      <a href="mailto:vamseejastiATme.com?Subject=Hi%20from%20the%20blog" target="_top"><i class="icon-envelope"></i></a>
+      <a href="https://github.com/jasti" target="_blank"><i class="icon icon-github"></i></a>
+      <a href="https://www.linkedin.com/pub/vamsee-jasti/8/72/b58" target="_blank"><i class="icon icon-linkedin"></i></a>
+      <a href="mailto:vamseej@gmail.com?Subject=Hello%20stranger!%20blog" target="_top"><i class="icon icon-envelope"></i></a>
       <a href="/atom.xml"><i class="fa fa-rss"></i></a>
     </section>
 
