--- a/css/base.css
+++ b/css/base.css
@@ -14,8 +14,8 @@ a {
 	position: fixed;
 	left: 15px;
 	top: 15px;
-	width: 80px;
-	font-family: Helvetica, sans-serif;
+	width: 120px;
+	font-family: "Open Sans",Helvetica, sans-serif;
 }
 
 .sidebar a {
