--- a/css/base.css
+++ b/css/base.css
@@ -66,7 +66,7 @@ a {
 }
 
 .sidebar .meta .icon {
-	margin-right: 12px;
+	margin-right: 8px;
 }
 
 .sidebar .sections {
@@ -104,7 +104,7 @@ a {
 
 .content h1 {
 	color: #333;
-	font-family: ""Open Sans"", Helvetica, sans-serif;
+	font-family: "Open Sans", Helvetica, sans-serif;
 	font-weight: 400;
 }
 
