--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -67,6 +67,7 @@
       <ul>
         <li><a href="/about.html">about</a></li>
         <li><a href="/">posts</a></li>
+        <li><a href="/projects.html">projects</a></li>
 
       </ul>
     </section>
