--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,7 +31,7 @@ layout: layout
 
   <section class="meta">
   <p>
-    Lets get in touch on : <a href="https://twitter.com/{{ site.twitter }}" target="_blank"><i class="icon icon-twitter"></i></a> or via :<a href="mailto:vamseejastiATme.com?Subject=Hi%20from%20the%20blog" target="_top"><i class="icon-envelope"></i></a>
+    Lets get in touch on : <a href="https://twitter.com/{{ site.twitter }}" target="_blank"><i class="icon icon-twitter"></i></a> or via :<a href="mailto:vamseej@gmail.com.com?Subject=Hello%20stranger!" target="_top"><i class="icon-envelope"></i></a>
    </p>	
    	<br>
       <a href="http://twitter.com/share" class="twitter-share-button" data-count="none" data-via="{{ site.twitter }}">Tweet</a>
