--- a/css/base.css
+++ b/css/base.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 body {
-	font-family: "Open Sans","Palatino Linotype", "Book Antiqua", Palatino, serif;
+	font-family: "Oxygen","Palatino Linotype", "Book Antiqua", Palatino, serif;
 	margin: 0;
 	-webkit-font-smoothing: antialiased;
 }
@@ -15,7 +15,7 @@ a {
 	left: 15px;
 	top: 15px;
 	width: 120px;
-	font-family: "Open Sans",Helvetica, sans-serif;
+	font-family: "Oxygen",Helvetica, sans-serif;
 }
 
 .sidebar a {
@@ -104,7 +104,7 @@ a {
 
 .content h1 {
 	color: #333;
-	font-family: "Open Sans", Helvetica, sans-serif;
+	font-family: "Lobster", Helvetica, sans-serif;
 	font-weight: 400;
 }
 
@@ -115,7 +115,7 @@ a {
 
 .content h2 {
 	color: #333;
-	font-family: "Open Sans", Helvetica, sans-serif;
+	font-family: "Oxygen", Helvetica, sans-serif;
 	font-weight: 400;
 }
 
@@ -126,7 +126,7 @@ a {
 
 .content h3 {
 	color: #333;
-	font-family: "Open Sans", Helvetica, sans-serif;
+	font-family: "Oxygen", Helvetica, sans-serif;
 	font-weight: 400;
 }
 
@@ -137,7 +137,7 @@ a {
 
 .content h4 {
 	color: #333;
-	font-family: "Open Sans", Helvetica, sans-serif;
+	font-family: "Oxygen", Helvetica, sans-serif;
 	font-weight: 400;
 }
 
@@ -163,6 +163,12 @@ a {
 	margin-bottom: 10px;
 }
 
+.content a {
+	color: #000000;
+	text-decoration: none;
+	font-weight:bold;
+}
+
 .content p {
 	font-size: 16px;
 	margin-top: 0;
@@ -184,13 +190,6 @@ a {
 	max-width: 100%;
 }
 
-.content hr {
-	border: 0;
-	height: 6px;
-	background-image: url("/images/hr.png");
-	background-repeat: repeat-x;
-	margin: 2em 3em;
-}
 
 .content li {
 	margin-bottom: 10px;
@@ -219,7 +218,7 @@ a {
 
 .content .byline {
 	margin-bottom: 17px;
-	font-family: "Open Sans", Helvetica, sans-serif;
+	font-family: "Oxygen", Helvetica, sans-serif;
 	padding-left: 0px;
 	font-size: 17px;
 	color: #777;
@@ -237,7 +236,7 @@ a {
 .content .listing {
 	margin: 10px 0 0 0;
 	padding: 0;
-	font-family: Helvetica, sans-serif;
+	font-family: "Oxygen",Helvetica, sans-serif;
 }
 
 .content .listing ul {
@@ -246,7 +245,7 @@ a {
 }
 
 .content .listing li {
-	font-size: 13px;
+	font-size: 18px;
 	list-style: none;
 	padding: 5px 3px;
 	margin: 0;
@@ -260,7 +259,9 @@ a {
 
 .content .listing a {
 	text-decoration: none;
+	font-weight:normal;
 }
+
 
 .content .listing a:hover {
 	text-decoration: underline;
@@ -269,7 +270,7 @@ a {
 .content .meta {
 	margin: 30px 0;
 	padding: 10px 0;
-	font-family: "Open Sans",Helvetica, sans-serif;
+	font-family: "Oxygen",Helvetica, sans-serif;
 }
 
 .content .meta p {
