add mobile icons

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -10,7 +10,7 @@
     .sidebar .name #fname, .sidebar .name #lname {
       font-size: 25px; }
   .sidebar .meta {
-    display: none; 
+    display: inline; 
     margin: 0; }
   .sidebar ul {
     padding: 25px; }
