--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -14,7 +14,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
   <link rel="alternate" type="application/rss+xml" href="/atom.xml" />
-
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.ico"/>
   <link rel="stylesheet" href="/css/fontawesome.min.css" type="text/css" media="screen, projection" />
   <link rel="stylesheet" href="/css/base.css" type="text/css" media="screen, projection" />
   <link rel="stylesheet" href="/css/pygments.css" type="text/css" />
@@ -25,7 +25,7 @@
   <link href="http://fonts.googleapis.com/css?family=Oxygen:300,400,700" rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=Lobster:400" rel="stylesheet" type="text/css">
 
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="apple-touch-icon" href="/images/apple-touch-icon.png" />
 
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script type="text/javascript" src="/js/application.js"></script>
