--- a/css/base.css
+++ b/css/base.css
@@ -62,7 +62,7 @@ a {
 }
 
 .sidebar .meta {
-	margin-left: 4px;
+	margin-	: 4px;
 }
 
 .sidebar .meta .icon {
@@ -187,7 +187,9 @@ a {
 .content img {
 	padding: 3px;
 	border: 1px solid #eeeeee;
-	max-width: 100%;
+	max-width: 750px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
