--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -72,6 +72,7 @@
         <li><a href="/about.html">about</a></li>
         <li><a href="/">posts</a></li>
         <li><a href="/projects.html">projects</a></li>
+        <li><a href="/books.html">books</a></li>
 
       </ul>
     </section>
