--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,7 +41,7 @@ layout: layout
     </section>
   </section>
 </section>  
-
+<!-- Editing disqus out for now
     <div id="disqus_thread"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
@@ -56,4 +56,4 @@ layout: layout
     </script>
     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-    
+  -->  
