--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -58,21 +58,20 @@
     </section>
 
     <section class="meta">
-  		<!-- TODO, see why this U 
-  		  <a href="https://github.com/jasti" target="_blank"><i class="icon icon-github"></i></a>-->
+  	
       <a href="https://twitter.com/vamseejasti" target="_blank"><i class="icon icon-twitter"></i></a>
       <a href="https://github.com/jasti" target="_blank"><i class="icon icon-github"></i></a>
       <a href="https://www.linkedin.com/pub/vamsee-jasti/8/72/b58" target="_blank"><i class="icon icon-linkedin"></i></a>
       <a href="mailto:vamseej@gmail.com?Subject=Hello%20stranger!%20blog" target="_top"><i class="icon icon-envelope"></i></a>
-      <a href="/atom.xml"><i class="fa fa-rss"></i></a>
+      <a href="/atom.xml" target="_blank"><i class="fa fa-rss-square"></i></a>
     </section>
 
     <section class="sections">
       <ul>
-        <li><a href="/about.html">about</a></li>
-        <li><a href="/">posts</a></li>
-        <li><a href="/projects.html">projects</a></li>
-        <li><a href="/books.html">books</a></li>
+        <li><a href="/about.html">About Me</a></li>
+        <li><a href="/">Posts</a></li>
+        <li><a href="/projects.html">Side Projects</a></li>
+        <li><a href="/books.html">Recent Books Reads</a></li>
 
       </ul>
     </section>
