--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -71,7 +71,7 @@
         <li><a href="/about.html">About Me</a></li>
         <li><a href="/">Posts</a></li>
         <li><a href="/projects.html">Side Projects</a></li>
-        <li><a href="/books.html">Recent Books Reads</a></li>
+        <li><a href="/books.html">Recent Book Reads</a></li>
 
       </ul>
     </section>
