--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -62,8 +62,8 @@
       <a href="https://twitter.com/vamseejasti" target="_blank"><i class="icon icon-twitter"></i></a>
       <a href="https://github.com/jasti" target="_blank"><i class="icon icon-github"></i></a>
       <a href="https://www.linkedin.com/pub/vamsee-jasti/8/72/b58" target="_blank"><i class="icon icon-linkedin"></i></a>
-      <a href="mailto:vamseej@gmail.com?Subject=Hello%20stranger!%20blog" target="_top"><i class="icon icon-envelope"></i></a>
-      <a href="/atom.xml" target="_blank"><i class="fa fa-rss-square"></i></a>
+      <a href="mailto:vamseej@gmail.com?Subject=Hi%20from%20the%20blog" target="_top"><i class="icon icon-envelope"></i></a>
+      <!--<a href="/atom.xml" target="_blank"><i class="fa fa-rss-square"></i></a> -->
     </section>
 
     <section class="sections">
