--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -47,11 +47,11 @@
 
 <body>
   <section class="sidebar">
-    <!--
+    
     <a href="/">
-      <img src="/images/blogPic.jpg" height="100" width="100" class="avatar" />
+      <img src="/images/blogpic2.jpg" height="120" width="100" class="avatar" />
     </a>
-  -->
+  
 
     <section class="name">
      
