--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -63,7 +63,7 @@
     </section>
 
     <section class="meta">
-  	
+  	 
       <a href="https://twitter.com/vamseejasti" target="_blank"><i class="icon icon-twitter"></i></a>
       <a href="https://github.com/jasti" target="_blank"><i class="icon icon-github"></i></a>
       <a href="https://www.linkedin.com/pub/vamsee-jasti/8/72/b58" target="_blank"><i class="icon icon-linkedin"></i></a>
@@ -78,7 +78,7 @@
         <li><a href="/">Posts</a></li>
         <li><a href="/projects.html">Side Projects</a></li>
         <li><a href="/books.html">Recent Book Reads</a></li>
-
+        <li><a href="http://twitter.com/{{ site.twitter }}" class="twitter-follow-button" data-show-count="false">Follow @{{ site.twitter }}</a></li>
       </ul>
     </section>
   </section>
